fix(table): +border-spacing: 0

--- a/packages/mantine/src/components/table/Table.module.css
+++ b/packages/mantine/src/components/table/Table.module.css
@@ -5,6 +5,7 @@
 .table {
     width: 100%;
     padding-bottom: var(--mantine-spacing-sm);
+    border-spacing: 0;
 }
 
 .header {
